--- a/aquarisuswaptest17.1/index.html
+++ b/aquarisuswaptest17.1/index.html
@@ -2382,7 +2382,6 @@ async function scanInterestForCurrent(){
   }
 
   try {
-    const server   = getServer();
     const nowMs    = Date.now();
     const cutoffMs = nowMs - INTEREST_YEARS_BACK * 365 * 24 * 60 * 60 * 1000;
 
@@ -2390,41 +2389,38 @@ async function scanInterestForCurrent(){
     interestRowsAll   = [];
     interestPageIndex = 0;
 
-    // --- PRE-FILTER: only AQUAmb payments to this wallet ---
-    let paymentsCb = server
-      .payments()
-      .forAccount(pk)
-      .order("desc")
-      .limit(200);
-
-    paymentsCb.url.searchParams.set("asset_code",   AQUAmb_CODE);
-    paymentsCb.url.searchParams.set("asset_issuer", AQUAmb_ISSUER);
-
-    let page = await paymentsCb.call();
-    // -------------------------------------------------------
+    // DIRECT HORIZON CALL WITH PREFILTER:
+    // only AQUAmb payments *to* this wallet, newest first
+    let url = `${HORIZON}/payments?` +
+      `order=desc&limit=200` +
+      `&asset_code=${encodeURIComponent(AQUAmb_CODE)}` +
+      `&asset_issuer=${encodeURIComponent(AQUAmb_ISSUER)}` +
+      `&to=${encodeURIComponent(pk)}`;
 
     let pagesSeen = 0;
 
-    outer: while (page && pagesSeen < MAX_TX_PAGES) {
+    outer: while (url && pagesSeen < MAX_TX_PAGES) {
       pagesSeen++;
 
-      const records = page.records || [];
+      const res = await fetch(url);
+      const j   = await res.json();
+      const records = j?._embedded?.records || [];
       if (!records.length) break;
 
       for (const op of records) {
-        // Only plain payments
+        // only plain payments
         if (op.type !== "payment") continue;
 
-        // Must come FROM the interest payer
+        // must come FROM the interest payer
         if (op.from !== INTEREST_PAYER) continue;
 
-        // Defensive: TO this wallet (forAccount(pk) already enforces this, but keep it)
+        // defensive: TO this wallet (the `to=` filter should ensure this already)
         if (op.to !== pk) continue;
 
         const hash = op.transaction_hash;
         if (!hash) continue;
 
-        // Fetch memo + tx timestamp
+        // memo + tx timestamp
         const meta      = await getTxMeta(hash);
         const memo      = meta.memo || "";
         const createdAt = meta.created_at || op.created_at;
@@ -2433,18 +2429,18 @@ async function scanInterestForCurrent(){
         const createdMs = new Date(createdAt).getTime();
         if (!isFinite(createdMs)) continue;
 
-        // Stop once we’re older than the cutoff window
+        // stop if we’re older than the cutoff window
         if (createdMs < cutoffMs) break outer;
 
-        // Filter by memo prefix e.g. "AQUAmb APR 7.5% W48/25"
+        // memo must start with AQUAmb APR…
         if (!memo || !memo.startsWith(INTEREST_MEMO_PREFIX)) continue;
 
         const amountNum = Number(op.amount);
         if (!isFinite(amountNum) || amountNum <= 0) continue;
 
-        const dateObj   = new Date(createdAt);
-        const dateStr   = dateObj.toISOString().replace("T"," ").slice(0,16);
-        const memoEsc   = memo.replace(/</g,"&lt;").replace(/>/g,"&gt;");
+        const dateObj = new Date(createdAt);
+        const dateStr = dateObj.toISOString().replace("T"," ").slice(0,16);
+        const memoEsc = memo.replace(/</g,"&lt;").replace(/>/g,"&gt;");
 
         interestRowsAll.push({
           hash,
@@ -2461,8 +2457,7 @@ async function scanInterestForCurrent(){
         }
       }
 
-      if (!page.next) break;
-      page = await page.next();
+      url = j?._links?.next?.href || null;
     }
 
     if (!interestRowsAll.length) {
